# CUpedia

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  init-zhparser.sql  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.husky/: pre-commit  pre-push
cu-claw/: .env.example  package-lock.json  package.json
e2e/: account-completion.spec.ts  admin-access.spec.ts  admin-ban.spec.ts  admin-role-governance.spec.ts  canteen-danmaku.spec.ts  canteen-menu-import.spec.ts  canteen-menu-votes.spec.ts  college-picker.spec.ts  course-review-browse.spec.ts  (+36 more)
tools/scraper/: README.md  build_staff_source_queue.py  common.py  compare_staff_production.py  export_production_professor_snapshot.py  pyproject.toml  reconcile_professor_staff_identities.py  render_staff_directory_import.py  render_staff_import.py  resolve_staff_pilot.py  scrape_courses.py  scrape_handbook.py  scrape_staff.py  scrape_timetable.py  staff-alias-overrides.json  staff-identity-overrides.json  staff-person-overrides.json  test_build_staff_source_queue.py  test_compare_staff_production.py  test_render_staff_directory_import.py  test_render_staff_import.py  test_resolve_staff_pilot.py  test_scrape_courses.py  test_scrape_handbook.py  test_scrape_staff.py  test_scrape_timetable.py
(+677 files in other folders)
